Fixing spacing

--- a/scss/api/functions/_offset.scss
+++ b/scss/api/functions/_offset.scss
@@ -14,9 +14,10 @@
         $parent-duration: _get($parent, 'options' 'duration');
         $parent-delay: _get($parent, 'options' 'delay');
         $parent-offset-start: _get($parent, 'options' 'offset-start');
+        $parent-iterations: _get($parent, 'options' 'iterations');
 
         @if $mode == 'auto' {
-            $mode: _get($parent, 'options' 'iterations') > 1;
+            $mode: if($parent-iterations == 'infinite' or $parent-iterations > 1, 'continuous', null);
         }
     }
 
@@ -31,15 +32,25 @@
     $relative-offset-start: 0%;
     $relative-offset-end: $effect-duration / $calculated-duration;
 
-    @each $keyframe in _get($effect, 'frames') {
-        $keyframe-offset: _get($keyframe, 'offset');
+    $keyframes: _get($effect, 'frames');
 
-        $keyframe: _set($keyframe, 'offset', $relative-offset-end * $keyframe-offset);
+    @each $keyframe in $keyframes {
+        $keyframe-offset: _get($keyframe, 'offset');
+        $calculated-offset: $relative-offset-end * $keyframe-offset;
+
+        $keyframe: _m-set($keyframe, 'offset', $calculated-offset);
 
         $calculated-keyframes: append($calculated-keyframes, $keyframe);
     }
 
-    $effect: _set($effect, 'frames', $calculated-keyframes);
+    @if $relative-offset-end < 1 {
+        $last-keyframe: _last($keyframes);
+        $last-keyframe: _set($last-keyframe, 'offset', 100%);
+
+        $calculated-keyframes: append($calculated-keyframes, $last-keyframe);
+    }
+
+    $effect: _m-set($effect, 'frames', $calculated-keyframes);
 
     // Set proper delay
     $effect-delay: _get($effect, 'options' 'delay')
@@ -47,8 +58,8 @@
         + $parent-delay
         + $parent-offset-start;
 
-    $effect: _set($effect, 'calculated' 'delay', $effect-delay);
-    $effect: _set($effect, 'calculated' 'duration', $calculated-duration);
+    $effect: _m-set($effect, 'calculated' 'delay', $effect-delay);
+    $effect: _m-set($effect, 'calculated' 'duration', $calculated-duration);
 
     @return $effect;
 }
@@ -75,7 +86,7 @@
             $duration: $duration + ($child-duration * $child-iterations);
         }
 
-        $effect: _set($effect, 'options' 'duration', $duration);
+        $effect: _m-set($effect, 'options' 'duration', $duration);
     }
 
     $previous-duration: 0s;
@@ -90,9 +101,9 @@
 
         $remaining-duration: $remaining-duration - $duration;
 
-        $child-effect: _set($child-effect, 'options' 'offset-start', $previous-duration);
-        $child-effect: _set($child-effect, 'options' 'offset-end', $remaining-duration);
-        $child-effect: _set($child-effect, 'options' 'duration', $duration / $child-iterations);
+        $child-effect: _m-set($child-effect, 'options' 'offset-start', $previous-duration);
+        $child-effect: _m-set($child-effect, 'options' 'offset-end', $remaining-duration);
+        $child-effect: _m-set($child-effect, 'options' 'duration', $duration / $child-iterations);
 
         $previous-duration: $previous-duration + $duration;
 
@@ -101,7 +112,7 @@
         $calculated-effects: append($calculated-effects, $child-effect);
     }
 
-    $effect: _set($effect, 'effects', $calculated-effects);
+    $effect: _m-set($effect, 'effects', $calculated-effects);
 
     @return $effect;
 }
